--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.2.1",
     "metismenu": "^2.7.0",
     "mongoose": "^4.9.9",
+    "mongoose-unique-validator": "^1.0.5",
     "morgan": "^1.8.1",
     "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.1.0",
