--- a/package.json
+++ b/package.json
@@ -22,14 +22,23 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "animate.css": "^3.5.2",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
+    "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "cors": "^2.8.3",
     "debug": "^2.6.6",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "express-validation": "^1.0.2",
     "font-awesome": "^4.7.0",
+    "helmet": "^3.6.1",
+    "http-status": "^1.0.1",
+    "joi": "^10.5.0",
     "jquery": "^3.2.1",
+    "method-override": "^2.3.9",
     "metismenu": "^2.7.0",
     "moment": "^2.18.1",
     "mongoose": "^4.9.9",
@@ -37,6 +46,7 @@
     "morgan": "^1.8.1",
     "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.1.0",
+    "util": "^0.10.3",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
