--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-modal": "^2.0.3",
     "animate.css": "^3.5.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
@@ -44,6 +45,7 @@
     "mongoose": "^4.9.9",
     "mongoose-unique-validator": "^1.0.5",
     "morgan": "^1.8.1",
+    "ng2-toastr": "^4.1.0",
     "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.1.0",
     "util": "^0.10.3",
