--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "helmet": "^3.6.1",
     "http-status": "^1.0.1",
     "joi": "^10.5.0",
+    "joi-date-extensions": "^1.0.2",
     "jquery": "^3.2.1",
     "method-override": "^2.3.9",
     "metismenu": "^2.7.0",
